<resources>
    <string name="app_name">Masuk Sekolah</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Masuk Sekolah</string>

    <string name="hint_nama">Nama</string>
    <string name="hint_terakhir_sekolah">Terakhir Sekolah</string>
    <string name="hint_alasan">Alasan</string>
    <string name="hint_lokasi">Location</string>
    <string name="hint_photo">Picture</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="google_maps_key">AIzaSyCvdL3e65iJL2PBrULcPNy7rvy5SqWq3WI</string>
</resources>
