<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/blurr"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"/>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content_login">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="85dp">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_image="@drawable/ic_action_user"
                >

                <EditText
                    android:id="@+id/input_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_username" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                app:mtf_cardCollapsedHeight="4dp"
                android:layout_marginTop="5dp"
                app:mtf_image="@drawable/ic_action_key"
                >

                <EditText
                    android:id="@+id/input_pass"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/btn_sign_in"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="REGISTER "
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="6dp"
                        android:textStyle="bold"
                        android:paddingRight="45dp"
                        android:id="@+id/btn_register"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Do not have an account? "
                        android:layout_marginTop="6dp"
                        android:paddingLeft="40dp"
                        android:paddingRight="6dp"
                        android:layout_toLeftOf="@id/btn_register"/>

                </RelativeLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>