<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view_anak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Form Anak"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_user"
                android:layout_alignBottom="@+id/input_layout_name"
                android:layout_alignLeft="@+id/imageView8"
                android:layout_alignStart="@+id/imageView8" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_nama"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_edit"
                android:id="@+id/imageView8"
                android:layout_above="@+id/input_layout_password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/input_layout_name">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_terakhir_sekolah"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_edit"
                android:layout_alignBottom="@+id/input_layout_password"
                android:layout_alignLeft="@+id/imageView8"
                android:layout_alignStart="@+id/imageView8" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/input_layout_email">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_alasan"
                    android:inputType="textMultiLine"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_below="@+id/card_view_anak">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Take Location"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_location"
                android:layout_alignBottom="@+id/input_layout_lokasi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_lokasi"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_lokasi"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_below="@+id/card_view_lokasi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Take Picature"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_camera"
                android:layout_alignBottom="@+id/input_layout_photo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_photo"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_photo"
                    android:textSize="16dp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hasil_photo"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
